--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 1</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -42,9 +45,15 @@
                     facere. Molestias velit est possimus voluptatibus minima, maxime dignissimos quis itaque cupiditate
                     nobis incidunt nisi iste facere atque alias pariatur tempore. Ratione exercitationem reiciendis sint
                     debitis dolorem doloremque labore neque quisquam molestias aliquid obcaecati dolorum amet temporibus
-                    quaerat est, deleniti ea, asperiores facere magni omnis cumque quas vitae magnam nulla? Porro?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia voluptate quam sint a at explicabo minima inventore non, et dolorum nobis optio blanditiis, commodi, ipsum fugiat maxime iusto dignissimos totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ullam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum in recusandae dolore. Distinctio temporibus cumque est eum alias debitis similique.</P>
+                    quaerat est, deleniti ea, asperiores facere magni omnis cumque quas vitae magnam nulla? Porro?Lorem
+                    ipsum dolor sit, amet consectetur adipisicing elit. Officia voluptate quam sint a at explicabo
+                    minima inventore non, et dolorum nobis optio blanditiis, commodi, ipsum fugiat maxime iusto
+                    dignissimos totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ullam? Lorem
+                    ipsum dolor sit amet consectetur adipisicing elit. Ipsum in recusandae dolore. Distinctio temporibus
+                    cumque est eum alias debitis similique.</P>
                 <h3 class="right">SECTION TITLE</h3>
-                <P class="text-right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, ipsum! Non dolorum commodi
+                <P class="text-right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, ipsum! Non
+                    dolorum commodi
                     doloribus illo, voluptatem cum praesentium nobis rerum pariatur ipsa! Porro enim culpa magni quae
                     esse sint reiciendis, neque, fugit repellendus omnis officia totam repudiandae incidunt facere
                     tempora id officiis magnam. A quasi provident sapiente repudiandae est quia eum incidunt, minima
@@ -57,11 +66,12 @@
                     cum corrupti, magni architecto dignissimos debitis accusamus corporis ut, quae voluptate facere
                     sequi error? Repudiandae eveniet ea esse sunt ratione.</P>
             </div>
+            <footer>
+                <p>&copy; mfgw & cc</p>
+            </footer>
         </main>
     </div>
-        <footer>
-            <p>&copy; mfgw & cc</p>
-        </footer>
+
 </body>
 
 </html>
