--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!-- example head set up, includes bootstrap and fontawesome -->
 <!DOCTYPE html>
 <html lang="en">
@@ -8,14 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example Head Set Up</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- for using W3School formats that are from older bootstrap coding(3.4.1) goes with script -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+    <!-- for using W3School formats that are from older bootstrap coding(3.4.1) goes with link -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" defer></script>
+    <!-- when allowed, used "defer" in your script when placed in your head -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"
+        defer>
     </script>
     <!-- take out my fontawesome and add yours -->
-    <script src="https://kit.fontawesome.com/f9c9c624ab.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/f9c9c624ab.js" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
